--- a/index.html
+++ b/index.html
@@ -4,10 +4,38 @@
     <title>Retrieve Your Unique Code</title>
     <script>
         async function getCode() {
+            // Get Submission ID from input field
             const submissionId = document.getElementById("submissionId").value;
-            const response = await fetch(`https://your-database-endpoint/${submissionId}`);
-            const data = await response.json();
-            document.getElementById("result").innerText = data.code ? `Your Unique Code: ${data.code}` : "Submission ID not found.";
+
+            // Validate input
+            if (!submissionId) {
+                document.getElementById("result").innerText = "Please enter a valid Submission ID.";
+                return;
+            }
+
+            // Show loading message
+            document.getElementById("result").innerText = "Fetching your unique code...";
+
+            try {
+                // Fetch data from the backend
+                const response = await fetch(`https://your-database-endpoint/${submissionId}`);
+                
+                // Check if the response is okay
+                if (!response.ok) {
+                    throw new Error("Network response was not ok");
+                }
+
+                // Parse the response as JSON
+                const data = await response.json();
+
+                // Display the unique code or an error message
+                document.getElementById("result").innerText = data.code
+                    ? `Your Unique Code: ${data.code}`
+                    : "Submission ID not found.";
+            } catch (error) {
+                console.error("Error fetching the unique code:", error);
+                document.getElementById("result").innerText = "An error occurred. Please try again later.";
+            }
         }
     </script>
 </head>
