--- a/index.html
+++ b/index.html
@@ -3,19 +3,33 @@
 <head>
     <title>Retrieve Your Unique Code</title>
     <script>
-        // Function to extract 'code' parameter from the URL
-        function getCodeFromURL() {
-            const params = new URLSearchParams(window.location.search);
-            const code = params.get('code'); // Get the 'code' parameter
-            if (code) {
-                document.getElementById("result").innerText = `Your Unique Code: ${code}`;
+        async function getCode() {
+            // Get the entered submission ID
+            const submissionId = document.getElementById("submissionId").value;
+
+            if (!submissionId) {
+                document.getElementById("result").innerText = "Please enter your submission ID.";
+                return;
+            }
+
+            // Simulate retrieving the unique code from your data source
+            const response = await fetch("https://your-database-endpoint", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json",
+                },
+                body: JSON.stringify({ submissionId }),
+            });
+
+            const data = await response.json();
+
+            // Display the result
+            if (data.code) {
+                document.getElementById("result").innerText = `Your Unique Code: ${data.code}`;
             } else {
-                document.getElementById("result").innerText = "Code not found. Please check your link.";
+                document.getElementById("result").innerText = "Submission ID not found. Please check and try again.";
             }
         }
-
-        // Run function on page load
-        window.onload = getCodeFromURL;
     </script>
     <style>
         body {
@@ -32,14 +46,33 @@
             font-size: 18px;
         }
 
+        input {
+            margin-top: 20px;
+            padding: 10px;
+            width: 300px;
+        }
+
+        button {
+            padding: 10px 20px;
+            margin-top: 10px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+
         #result {
             font-weight: bold;
+            margin-top: 20px;
             color: #333;
         }
     </style>
 </head>
 <body>
     <h1>Retrieve Your Unique Code</h1>
+    <p>Enter your Submission ID below to retrieve your unique code:</p>
+    <input type="text" id="submissionId" placeholder="Enter Submission ID">
+    <button onclick="getCode()">Submit</button>
     <p id="result"></p>
 </body>
 </html>
